arkts_static_test/05_Generics/ets_cases/5.1.3_Type_Parameter_Variance/compile-fail/GEN_05_01_03_101_FAIL_POSITION.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id GEN_05_01_03_101_FAIL_POSITION
 * @expect compile-fail
 * @section 5.1.3
 * @design out 在 in-position（方法参数）
 * @note 反向用例：验证 out 类型参数作为方法参数编译错误
 */
class X<out T> {
    foo(p: T): void {}
}
